# Telegram_encryption

./: .gitignore  CMakeLists.txt  README.md  client.cpp  client.h  encryption.cpp  encryption.h  main.cpp  symmetry_encryption.cpp
